Landingpage.css
body{

    margin:0;
    padding:0;
    border:0;
    }

body >* ul,li,a{

text-decoration: none;
list-style: none;

}
.top-section
{
    background-color:#1F2937;
   color:white;
   height: 500px;
}
.header
{
    padding:20px;
    display: flex;
    justify-content:space-around ;
}
.header-text
{
  
    padding:8px;
    margin:10px;
    font-size:24px;
    color: #f9f6f8;
   
}
.header-link
{
   
    padding:14px;
    font-size: 18px;
    color: #E5E7EB;
    display: flex;
    gap:22px;
       
}

.top-section-content
{
    height:350px;
   
   margin: 20px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;   
       
}
.top-section-heading
{

font-size:48px;
font-weight:bolder;
color:#F9FAF8;
}
.top-section-para
{
   
    margin-top:0px ;
    padding: 0px;
    color: #E7E5EB;
    height: 100px;
    font-size: 18px;
    width: 400px;
}
.top-section-button
{

    width:80px;
    height: 50px;
    background-color: #3882F6;
    border-radius: 8px;
}
.top-section-image
{  

    margin-left: 30px;
    width:500px;
    height: 300px;
}



.quote-section
{

    background-color: beige;
}

.footer
{

    background-color: cornsilk;
}


.information-heading
{

    font-size:36px;
    font-weight: bolder;
    color:#1F2937;
}

.imageandinfo{


    display: flex;
    justify-content: space-evenly;
}

.image-container
{

    border:1px solid red;
    width:100px;
    height: 100px;
}

